--- a/build.yaml
+++ b/build.yaml
@@ -22,4 +22,6 @@ include:
   - board: nice_nano
     shield: jorne_left
   - board: nice_nano
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
     shield: jorne_right
