--- a/config/jorne.conf
+++ b/config/jorne.conf
@@ -2,7 +2,11 @@
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-# Uncomment the following line to enable the Jorne OLED Display
+# OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
-CONFIG_ZMK_DISPLAY_INVERT=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
