--- a/build.yaml
+++ b/build.yaml
@@ -20,8 +20,8 @@
 ---
 include:
   - board: nice_nano
-    shield: jorne_left nice_oled
+    shield: jorne_left
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano
-    shield: jorne_right nice_oled
+    shield: jorne_right
