--- a/config/jorne.conf
+++ b/config/jorne.conf
@@ -1,7 +1,7 @@
 CONFIG_ZMK_KEYBOARD_NAME="Corne"
 # Uncomment the following lines to enable the Jorne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
 
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
