--- a/build.yaml
+++ b/build.yaml
@@ -22,6 +22,7 @@ include:
   - board: nice_nano
     shield: jorne_left
     snippet: studio-rpc-usb-uart
+    snippet: zmk-usb-logging
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano
     shield: jorne_right
