--- a/build.yaml
+++ b/build.yaml
@@ -22,7 +22,7 @@ include:
   - board: nice_nano
     shield: jorne_left
     snippet: zmk-usb-logging
-    snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y
+#    snippet: studio-rpc-usb-uart
+#    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano
     shield: jorne_right
