--- a/build.yaml
+++ b/build.yaml
@@ -25,3 +25,5 @@ include:
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano
     shield: jorne_right
+  - board: nice_nano
+    shield: settings_reset
