--- a/config/jorne.conf
+++ b/config/jorne.conf
@@ -3,6 +3,8 @@ CONFIG_ZMK_KEYBOARD_NAME="Corne"
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 
