--- a/config/jorne.conf
+++ b/config/jorne.conf
@@ -6,6 +6,7 @@ CONFIG_WS2812_STRIP=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 CONFIG_BT_CTLR_PHY_2M=n
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
