--- a/config/jorne.conf
+++ b/config/jorne.conf
@@ -1,11 +1,11 @@
 CONFIG_ZMK_KEYBOARD_NAME="Corne"
 # Uncomment the following lines to enable the Jorne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+#CONFIG_ZMK_RGB_UNDERGLOW=y
+#CONFIG_WS2812_STRIP=y
 
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 CONFIG_BT_CTLR_PHY_2M=n
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_STUDIO=y
