--- a/config/jorne.conf
+++ b/config/jorne.conf
@@ -7,6 +7,8 @@ CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 CONFIG_BT_CTLR_PHY_2M=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_SLEEP=y
 
 CONFIG_ZMK_STUDIO=y
@@ -14,7 +16,8 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 # OLED Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
