--- a/build.yaml
+++ b/build.yaml
@@ -20,10 +20,10 @@
 ---
 include:
   - board: nice_nano
-    shield: corne_left
+    shield: jorne_left
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano
-    shield: corne_right
+    shield: jorne_right
   - board: nice_nano
     shield: settings_reset
